--- a/Code/WormDataImport.Rmd
+++ b/Code/WormDataImport.Rmd
@@ -98,14 +98,12 @@ PhysChemP <- read_sheet(googlesheet_url, sheet = "PhysChemP")
 
 # Analysis the biodiversities of the different colonies within the treatments
 
-```{r methods set up, fig.cap = "Worm Composting Method Setup.", out.height="800pt", out.width="100%", echo = FALSE}
+```{r methods set up, fig.cap = "Figure 1: Vermicast system made from 2L pop bottle which was put over top a petri dish to collect output from system. ", out.height="800pt", out.width="100%", echo = FALSE}
 
 knitr::include_graphics(file.path("..", "Data", "RawData", "Method_Set_Up.png"))
 ```
 
-Figure 1: Vermicast system made from 2L pop bottle which was put over top a petri dish to collect output from system. 
-
-Experiment groups:
+## Experiment groups:
 1. Worms and apples
 2. Worms, apples and dirt
 3. Worms, apples and dirt one week before
@@ -121,12 +119,10 @@ knitr::include_graphics(file.path("..", "Data", "RawData", "Method_Overall_Set_U
 Figure 2. Schematic of vermicast culturing process for worm pellet liquid output. Colony analysis of colonies using microscopy and gram-staining. Created using BioRender.com.
 
 
-```{r analysis, fig.cap = "Pellet and Vermicast Output Culturing", out.height="800pt", out.width="100%", echo = FALSE}
+```{r plate examples, fig.cap = "Figure 3. Example of cultured vermicast liquid for experimental groups 1-5, respectively.", out.height="800pt", out.width="100%", echo = FALSE}
 
 knitr::include_graphics(file.path("..", "Data", "RawData", "Plate_Colony_Examples.png"))
 ```
-
-Figure 3. Example of cultured vermicast liquid for experimental groups 1-5, respectively. 
 
 ## Biodivesity of the vermicast liquid output
 
@@ -325,12 +321,11 @@ Figure 15. Identification of gram staining (0 = negative, 1 =positive) for the d
 This graph shows us the different gram stains across colonies in the treatment types, which let us see if the colonies have consistent gram types across treatments. If they don't, they were likely different colonies. 
 
 
-```{r analysis, fig.cap = "Gram Stain.", out.height="800pt", out.width="100%", echo = FALSE}
+```{r gram stain examples, fig.cap = "Figure 16. Examples of gram stains from treatment groups 1-5. Includes two from treatment group 4, demonstrating contrasting results between colonies of the same treatment group.", out.height="800pt", out.width="100%", echo = FALSE}
 
 knitr::include_graphics(file.path("..", "Data", "RawData", "Gram_Stain_Groups.png"))
 ```
 
-Figure 16. Examples of gram stains from treatment groups 1-5. Includes two from treatment group 4, demonstrating contrasting results between colonies of the same treatment group.
 
 This next section is looking at the biodiversity of the worm pellets. (PhysChem2) We overall have less information for this, but putting the graphs side by side during a presentation could be helpful
 
